src/test/deca/context/invalid/without_class/var_already_defined.deca
// Description:
//    Variable declared with a name already used 
//
// Result:
//    ALREADY_DEFINED_VAR: Variable \(.\)\+ is already defined
//    line 9
{
    int x = 0;
    int x = 1;
}